# Dise-o_LPS_FS

./: .gitignore  Makefile  README.md
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  pyproject.toml
backend/app/application/: auth_service.py
backend/app/domain/: entities.py
backend/app/infrastructure/auth/: jwt.py
backend/app/infrastructure/config/: settings.py
backend/app/infrastructure/database/: models.py  repositories.py  session.py
backend/app/infrastructure/grpc/: server.py
backend/app/interfaces/: main.py
backend/app/interfaces/grpc/: auth_pb2.py  auth_pb2_grpc.py  auth_server.py
backend/app/interfaces/http/: health.py  metrics.py
backend/tests/: conftest.py  test_auth_service.py  test_health.py
contracts/: buf.gen.yaml  buf.gen2.yaml  buf.yaml
contracts/auth/v1/: auth.proto
contracts/course/v1/: course.proto
contracts/grade/v1/: grade.proto
contracts/student/v1/: student.proto
docs/: auth-service.md
frontend/: .env.example  Dockerfile  artisan  composer.json  package-lock.json  package.json  playwright.config.js  pnpm-lock.yaml  tailwind.config.js  vite.config.js
frontend/app/Http/Controllers/Auth/: AuthController.php
frontend/app/Modules/Academic/: helpers.php
frontend/app/Modules/Auth/: helpers.php
frontend/bootstrap/cache/: packages.php  services.php
frontend/resources/css/: app.css
frontend/resources/js/: app.js
frontend/resources/views/: dashboard.blade.php
frontend/resources/views/auth/: forgot-password.blade.php  login.blade.php  register.blade.php
frontend/resources/views/layouts/: app.blade.php  guest.blade.php
frontend/routes/: web.php
frontend/src/: bootstrap.js  main.js  style.css
frontend/tests/e2e/: auth.spec.js
infra/docker/: docker-compose.yml
infra/docker/monitoring/prometheus/: prometheus.yml
